[package]
name = "yatzy"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/xi-editor/druid", rev = "3a3aadb" }
match-derive = { path = "../../contrib/druid-enum-helpers/match-derive" }
anyhow = "1.0.31"
serde = "1.0.110"
rand = "0.7.3"
crossbeam-channel = "0.4.2"
